make audio play

--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 </head>
 <body>
   <section id="gallery">
-    <a href="http://lorempixel.com/300/200/nature/1" data-lightbox="image-set"><img src="http://lorempixel.com/300/200/nature/1" alt="random"></a>
-    <a href="http://lorempixel.com/300/200/nature/2" data-lightbox="image-set"><img src="http://lorempixel.com/300/200/nature/2" alt="random"></a>
-    <a href="http://lorempixel.com/300/200/nature/3" data-lightbox="image-set"><img src="http://lorempixel.com/300/200/nature/3" alt="random"></a>
+    <a id="piano-g-img" href="http://lorempixel.com/300/200/nature/1" data-lightbox="image-set"><img src="http://lorempixel.com/300/200/nature/1" alt="random"></a>
+    <a id="piano-a-img" href="http://lorempixel.com/300/200/nature/2" data-lightbox="image-set"><img src="http://lorempixel.com/300/200/nature/2" alt="random"></a>
+    <!-- <a href="http://lorempixel.com/300/200/nature/3" data-lightbox="image-set"><img src="http://lorempixel.com/300/200/nature/3" alt="random"></a>
     <a href="http://lorempixel.com/300/200/nature/4" data-lightbox="image-set"><img src="http://lorempixel.com/300/200/nature/4" alt="random"></a>
-    <a href="http://lorempixel.com/300/200/nature/5" data-lightbox="image-set"><img src="http://lorempixel.com/300/200/nature/5" alt="random"></a>
+    <a href="http://lorempixel.com/300/200/nature/5" data-lightbox="image-set"><img src="http://lorempixel.com/300/200/nature/5" alt="random"></a> -->
   </section>
+  
+  <audio id="piano-g" src="audio/piano-g.mp3"></audio>
+  <audio id="piano-a" src="audio/piano-a.mp3"></audio>
+  <!-- <audio src="audio/piano-g.mp3"></audio>
+  <audio src="audio/piano-g.mp3"></audio>
+  <audio src="audio/piano-g.mp3"></audio> -->
   
   <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="lightbox/src/js/lightbox.js"></script>
